[workspace]
resolver = "3"
members = [
	"libsqlitesite",
	"sqlitesite-cgi",
	"sqlitesite-cli",
	"sqlitesite-web",
]

[workspace.package]
edition = "2024"
authors = ["Amanda McCann <amanda@technomancy.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amandasaurus/sqlitesite"

[patch.crates-io]
libsqlitesite = { path = "./libsqlitesite/" }
