[package]
name = "libsqlitesite"
version = "0.2.0"
edition = "2024"
authors = ["Amanda McCann <amanda@technomancy.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amandasaurus/sqlitesite"
description = "Rust library for sqlitesite"

[dependencies]
anyhow = "1.0.102"
glob = "0.3.3"
rusqlite = "0.39.0"
serde_json = "1.0.149"
zstd = "0.13.3"
