[package]
name = "sqlitesite-cli"
version = "0.2.0"
edition = "2024"
authors = ["Amanda McCann <amanda@technomancy.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amandasaurus/sqlitesite"
description = "CLI interfact to a sqlitesite"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
indicatif = "0.18.2"
libsqlitesite = "0.2.0"
walkdir = "2.5.0"
zstd = "0.13.3"
