[package]
name = "sqlitesite-web"
version = "0.2.0"
edition = "2024"
authors = ["Amanda McCann <amanda@technomancy.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amandasaurus/sqlitesite"
description = "Debug web server to serve from sqlitesite file"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
rouille = "3.6.2"
libsqlitesite = "0.2.0"
